@@ -1,6 +1,7 @@
 0.8
 
 Error popup now shown if one or more fields are missing
+Added browse buttons for the 2 input fields
 
 0.7
 
